Fix social row spacing

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 0 20px;
+    padding: 0 10px;
 
     &-icon {
       color: $dark-pink;
@@ -17,6 +17,10 @@
         background-color: $dark-pink;
         color: $white;
       }
+    }
+
+    &-row {
+      margin-bottom: 10px;
     }
   }
 }
